Iterate through all keys in agent
If you have more than one key in ssh-agent, resync will now iterate through
all of them instead of just using the first one.

resync will also print out the base64-encoded SHA256 fingerprint of the key
it's trying in debug messages now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bytesize = "1.1.0"
 getopts = "0.2.21"
 log = "0.4.17"
 notify = "4.0.17"
+sha2 = "0.10.6"
 ssh2 = "0.9.3"
 stderrlog = "0.5.3"
 termion = "2.0.1"
