--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ getopts = "0.2.21"
 log = "0.4.17"
 notify = "4.0.17"
 sha2 = "0.10.6"
+shellexpand = "2.1.2"
 ssh2 = "0.9.3"
 stderrlog = "0.5.3"
 termion = "2.0.1"
